新增概率技能两个 改动天照

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "my-project",
   "version": "0.1.0",
+  "homepage": "https://wyz5677.github.io/Naruto-Games",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -18,6 +21,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "gh-pages": "^3.1.0",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.11"
